kubernetes/apps/home-automation/home-assistant/haos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: service
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/hostname: "ha.myk8s.se"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "ha.myk8s.se"
    external-dns.alpha.kubernetes.io/target: ${CLOUDFLARE_TUNNEL_TARGET}
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
spec:
  ingressClassName: tenant-root
  tls:
    - hosts:
        - ha.myk8s.se
      secretName: wildcard-le-tls-cert
  rules:
    - host: ha.myk8s.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
